Due to docker tag change

--- a/2_configmaps.yml
+++ b/2_configmaps.yml
@@ -12,6 +12,7 @@ data:
   LOANS_APPLICATION_NAME: loans
   CARDS_APPLICATION_NAME: cards
   GATEWAY_APPLICATION_NAME: gatewayserver
+  MESSAGE_APPLICATION_NAME: message
   KEYCLOAK_ADMIN: admin
   KEYCLOAK_ADMIN_PASSWORD: admin
   SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK-SET-URI: "http://keycloak:7080/realms/master/protocol/openid-connect/certs"
